overflow was fixed

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -1,5 +1,4 @@
 .page {
-  overflow: hidden;
   scroll-behavior: smooth;
 
   font-family: 'Roboto', sans-serif;
